app/assets/stylesheets/subject.css
body {
  font-family: "Apple Color Emoji";
  /*background-image: url("../images/bg.jpg");*/
  background: white;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
  color: black;
}

.form-control {
  background-color: transparent;
  /*color: white;*/
  border: 0;
  border-bottom: 2px solid rgba(255, 5, 32, 0.92);
  border-bottom-left-radius: 15px;

}

.form-control:focus {
  background-color: transparent;
  /*color: white;*/
  border: 0;
  border-bottom: 2px solid rgba(0, 255, 106, 0.92);
  box-shadow: 0 0 0 0;

}

.box-shadow {
  box-shadow: 0 0 25px 3px #40b2cd !important;
}

.btn-outline-success:hover, .btn-outline-success:focus, .btn-outline-success:active {
  background: #40b2cd;
  color: #fff;
}
.hide {
  display: none;
}

.show {
  display: block;
}

.border-2 {
  border: 2px solid white;
}

.border-bottom-dark {
  border-bottom: 2px solid white;
}

.border-bottom-gray {
  border-bottom: 1px solid #dee2e6;
}

.border-left-gray {
  border-left: 1px solid #dee2e6;
}

.border-top-dark {
  border-top: 2px solid white;
}

.border-left-dark {
  border-left: 2px solid white;
}

.border-right-dark {
  border-right: 2px solid white;
}

.word-wrap {
  word-break: break-all;
  /*// word-wrap: break-word;*/
  /*// overflow-wrap: break-word;*/
}

.table-wrapper {
  background: #fff;
  padding: 20px 25px;
  margin: 30px auto;
  border-radius: 3px;
  box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
}

.table-title {
  color: #fff;
  background: #40b2cd;
  padding: 16px 25px;
  margin: -20px -25px 10px;
  border-radius: 3px 3px 0 0;
  font-weight: bold;
}
.bg-blue {
  background: #40b2cd;
  color: #fff;
}

.table-title h2 {
  margin: 5px 0 0;
  font-size: 24px;
}

.search-box {
  position: relative;
  float: right;
}

.search-box .input-group {
  min-width: 300px;
  position: absolute;
  right: 0;
}

.search-box .input-group-addon, .search-box input {
  border-color: #ddd;
  border-radius: 0;
}

.search-box input {
  height: 50px;
  color: black;
  padding-right: 35px;
  background: #f4fcfd;
  border: none;
  border-radius: 4px !important;
}

.search-box input:focus {
  background: #fff;
}

.search-box input::placeholder {
  font-style: italic;
}

.search-box .input-group-addon {
  min-width: 35px;
  border: none;
  background: transparent;
  position: absolute;
  right: 0;
  z-index: 9;
  padding: 6px 0;
}

.search-box i {
  color: #a0a5b1;
  font-size: 26px;
  position: relative;
  top: 6px;
}

.rotate {
  -moz-transform: translateX(-50%) translateY(-50%) rotate(-90deg);
  -webkit-transform: translateX(-50%) translateY(-50%) rotate(-90deg);
  transform: translateX(-50%) translateY(-50%) rotate(-90deg);
  margin: auto;
}

.h-120p {
  height: 120px;
  font-size: 18px;
  padding: 5px;
}

.h-60p {
  height: 60px;
  font-size: 14px;
  padding: 5px;
}

.outer {
  position: relative;
}

.vertical-align-table {
  vertical-align: middle !important;
  display: table-cell;
}

.inner {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 80px;
}

.col-10, .col-md-10, .col-2, .col-12, .col-md-12, .col-md-2 {
  padding-right: 0;
}

.w-16 {
  width: 350px;
}

.w-4 {
  width: 60px;
}

.width-table {
  width: 1800px;
}

@media (min-width: 768px) {
  .inner {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 80px;
  }

  .outer {
    position: relative;
  }


  .w-16 {
    width: 16%;
  }

  .w-4 {
    width: 4%;
  }

  .width-table {
    width: 100%;
  }

}

.table-responsive {
  height: 725px;
}

.cssload-loader {
  width: 146px;
  height: 146px;
  line-height: 146px;
  margin: 20% 44% 0 46%;
  position: relative;
  box-sizing: border-box;
  text-align: center;
  z-index: 0;
  text-transform: uppercase;
  -o-text-transform: uppercase;
  -ms-text-transform: uppercase;
  -webkit-text-transform: uppercase;
  -moz-text-transform: uppercase;
}

.cssload-loader:before,
.cssload-loader:after {
  opacity: 0;
  box-sizing: border-box;
  -o-box-sizing: border-box;
  -ms-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  content: "\0020";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 97px;
  border: 5px solid rgb(255, 255, 255);
  box-shadow: 0 0 49px rgb(255, 255, 255), inset 0 0 49px rgb(255, 255, 255);
  -o-box-shadow: 0 0 49px rgb(255, 255, 255), inset 0 0 49px rgb(255, 255, 255);
  -ms-box-shadow: 0 0 49px rgb(255, 255, 255), inset 0 0 49px rgb(255, 255, 255);
  -webkit-box-shadow: 0 0 49px rgb(255, 255, 255), inset 0 0 49px rgb(255, 255, 255);
  -moz-box-shadow: 0 0 49px rgb(255, 255, 255), inset 0 0 49px rgb(255, 255, 255);
}

.cssload-loader:after {
  z-index: 1;
  animation: cssload-gogoloader 2.3s infinite 1.15s;
  -o-animation: cssload-gogoloader 2.3s infinite 1.15s;
  -ms-animation: cssload-gogoloader 2.3s infinite 1.15s;
  -webkit-animation: cssload-gogoloader 2.3s infinite 1.15s;
  -moz-animation: cssload-gogoloader 2.3s infinite 1.15s;
}

.cssload-loader:before {
  z-index: 2;
  animation: cssload-gogoloader 2.3s infinite;
  -o-animation: cssload-gogoloader 2.3s infinite;
  -ms-animation: cssload-gogoloader 2.3s infinite;
  -webkit-animation: cssload-gogoloader 2.3s infinite;
  -moz-animation: cssload-gogoloader 2.3s infinite;
}


@keyframes cssload-gogoloader {
  0% {
    transform: scale(0);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    transform: scale(1);
    opacity: 0;
  }
}

@-o-keyframes cssload-gogoloader {
  0% {
    -o-transform: scale(0);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    -o-transform: scale(1);
    opacity: 0;
  }
}

@-ms-keyframes cssload-gogoloader {
  0% {
    -ms-transform: scale(0);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    -ms-transform: scale(1);
    opacity: 0;
  }
}

@-webkit-keyframes cssload-gogoloader {
  0% {
    -webkit-transform: scale(0);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    -webkit-transform: scale(1);
    opacity: 0;
  }
}

@-moz-keyframes cssload-gogoloader {
  0% {
    -moz-transform: scale(0);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    -moz-transform: scale(1);
    opacity: 0;
  }
}

.bg-blue-2 {
  background: #40b2cd;
}

.navbar-dark .navbar-nav .nav-link {
  color: white;
}

.bg-f {
  background: floralwhite;
}

